# nix-ninja

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  flake.nix  mkMesonPackage.nix
.github/workflows/: build.yml
crates/deps-infer/: Cargo.toml
crates/deps-infer/src/: c_include_parser.rs  gcc_depfile.rs  gcc_depfile_parser.rs  gcc_include_parser.rs  lib.rs  main.rs
crates/nix-libstore/: Cargo.toml
crates/nix-libstore/src/: derivation.rs  derived_path.rs  placeholder.rs  store_path.rs
crates/nix-ninja/: Cargo.toml
crates/nix-ninja-task/: Cargo.toml
crates/nix-ninja-task/src/: derived_file.rs  lib.rs  main.rs
crates/nix-ninja/src/: build.rs  cli.rs  lib.rs  main.rs  relative_from.rs  task.rs
crates/nix-tool/: Cargo.toml
crates/nix-tool/src/: lib.rs
docs/: conventions.md  design.md  dynamic-derivations.md  todo.md
examples/header/: header.h  main.cpp  meson.build
examples/hello/: main.cpp  meson.build
examples/incremental/: main.c  meson.build  util.h
