[package]
name = "nix-ninja"
version.workspace = true
edition.workspace = true
description = "Ninja compatible build system using Nix backend"

[dependencies]
anyhow = { version = "1.0", features = [ "backtrace" ] }
clap = { version = "4.4", features = ["derive", "env"] }
deps-infer = { path = "../deps-infer" }
include-graph = { git = "https://github.com/hinshun/igraph", branch = "performance-improvements" }
n2 = { git = "https://github.com/hinshun/n2", branch = "feature/minimal-pub", default-features = false }
nix-libstore = { path = "../nix-libstore" }
nix-ninja-task = { path = "../nix-ninja-task" }
nix-tool = { path = "../nix-tool" }
regex = "1"
serde = "1"
serde_json = "1"
shell-words = "1.1.0"
walkdir = "2"
which = "7.0.2"
